Fix footer on small mobile phones

--- a/scss/_rwd.scss
+++ b/scss/_rwd.scss
@@ -134,7 +134,7 @@
 
 	.main,
 	.site-footer {
-		padding: 0 1em;
+		padding: 0 1em 1em;
 	}
 
 	.work-project img {
